--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>I am a great coder</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam error beatae iste soluta laudantium voluptates cum porro eius nisi in?</p>
 </body>
 </html>
